packages/jsii/test/negatives/neg.submodules-cannot-share-symbols.ts
export * as ns1 from './namespaced';
export * as ns2 from './namespaced';
